💄 Fix css on mobile (#68)
* 🔥 remove data

* 💄 change css for samsung

--- a/src/scss/profile.scss
+++ b/src/scss/profile.scss
@@ -264,6 +264,7 @@
         display: inline-block;
         min-width: 3em;
         border: none;
+        width: 2em;
       }
 
       i {
